experiement_output/error_log/nondex-showman-sharma-courseapp.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1464/wd/NonDex-plugin-test/github.com/showman-sharma/courseapp/src/main/java/com/vanish/courseapp/CourseappApplication.java:3: error: package com.vanish.courseapp.configuration does not exist
import com.vanish.courseapp.configuration.beanConfig;
                                         ^
Note: /mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task1464/wd/NonDex-plugin-test/github.com/showman-sharma/courseapp/src/main/java/com/vanish/courseapp/persistence/CourseRepositoryImpl.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 12s
